pkg/lang/testdata/ub/config/valid/state-encryption-local-reference.ub
locals: {
  aws-config: {
    assume-role: {
      role-arn:    'arn:aws:iam::123456789012:role/unobin-state'
      external-id: 'unobin-test'
    }
  }
}

state: {
  @backend: s3
  bucket:   'cloudboss'
  prefix:   'unobin'
  aws:      local.aws-config
}

encryption: {
  @key-source: kms
  key-id:      'alias/cloudboss'
  aws:         local.aws-config
}
