pkg/lang/testdata/ub/config/invalid/state-dotted-backend.ub
state: {
  @backend: aws.s3
}

encryption: { @key-source: aws.kms }
